WIP: Add flex to notch to fix IE11 label overflow

--- a/packages/mdc-notched-outline/mdc-notched-outline.scss
+++ b/packages/mdc-notched-outline/mdc-notched-outline.scss
@@ -35,11 +35,11 @@
     left: 0;
     box-sizing: border-box;
     width: 100%;
+    max-width: 100%;
     height: 100%;
     /* @noflip */
     text-align: left;
     pointer-events: none;
-    max-width: 100%;
 
     @include mdc-rtl {
       /* @noflip */
@@ -69,6 +69,7 @@
     }
 
     &__notch {
+      flex: 0 0 auto;
       width: auto;
       max-width: 100%;
     }
